<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fuse_core</name>
  <version>0.4.2</version>
  <description>
    The fuse_core package provides the base class interfaces for the various fuse components. Concrete implementations of these
    interfaces are provided in other packages.
  </description>

  <maintainer email="swilliams@locusrobotics.com">Stephen Williams</maintainer>
  <author email="swilliams@locusrobotics.com">Stephen Williams</author>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>libceres-dev</depend>
  <depend>libgoogle-glog-dev</depend>
  <depend>eigen</depend>
  <depend>fuse_msgs</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rosdoc config="rosdoc.yaml" />
  </export>
</package>
