<?xml version="1.0"?>
<package format="2">
  <name>fuse_doc</name>
  <version>0.4.0</version>
  <description>
    The fuse_doc package provides documentation and examples for the fuse package.
  </description>

  <maintainer email="swilliams@locusrobotics.com">Stephen Williams</maintainer>
  <author email="swilliams@locusrobotics.com">Stephen Williams</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>python3-catkin-pkg</build_depend>

  <export>
    <rosdoc config="rosdoc.yaml"/>    
  </export>
</package>
