<?xml version="1.0"?>
<package format="3">
  <name>fuse_doc</name>
  <version>0.4.2</version>
  <description>
    The fuse_doc package provides documentation and examples for the fuse package.
  </description>

  <maintainer email="swilliams@locusrobotics.com">Stephen Williams</maintainer>
  <author email="swilliams@locusrobotics.com">Stephen Williams</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <buildtool_depend condition="$ROS_PYTHON_VERSION == 2">python-catkin-pkg</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 3">python3-catkin-pkg</buildtool_depend>

  <export>
    <rosdoc config="rosdoc.yaml"/>    
  </export>
</package>
