<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fuse_graphs</name>
  <version>0.4.1</version>
  <description>
    The fuse_graphs package provides some concrete implementations of the fuse_core::Graph interface.
  </description>

  <maintainer email="swilliams@locusrobotics.com">Stephen Williams</maintainer>
  <author email="swilliams@locusrobotics.com">Stephen Williams</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>libceres-dev</depend>
  <depend>fuse_core</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <test_depend condition="$ROS_DISTRO >= melodic">benchmark</test_depend>
  <test_depend>roslint</test_depend>
  <test_depend>rostest</test_depend>

  <export>
    <fuse_core plugin="${prefix}/fuse_plugins.xml" />
  </export>
</package>
