<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fuse_graphs</name>
  <version>0.4.2</version>
  <description>
    The fuse_graphs package provides some concrete implementations of the fuse_core::Graph interface.
  </description>

  <maintainer email="swilliams@locusrobotics.com">Stephen Williams</maintainer>
  <author email="swilliams@locusrobotics.com">Stephen Williams</author>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>libceres-dev</depend>
  <depend>fuse_core</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>

  <test_depend>benchmark</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <fuse_core plugin="${prefix}/fuse_plugins.xml" />
    <rosdoc config="rosdoc.yaml" />
  </export>
</package>
